Fixed NoteState issue and alerts z-index

--- a/src/main/scala/com/bfil/board/public/styles.less
+++ b/src/main/scala/com/bfil/board/public/styles.less
@@ -39,6 +39,7 @@
 	width: 300px;
 	left: 50%;
 	margin-left: -150px;
+	z-index: 1000;
 }
 
 body {
